--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-hook-form": "^7.40.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
